--- a/app/config/dmishhsettings.yml
+++ b/app/config/dmishhsettings.yml
@@ -41,7 +41,7 @@ dmishh_settings:
         numberRecordOnPage:
             type: Symfony\Component\Form\Extension\Core\Type\NumberType
             options:
-                required: true
+                required: false
         emailContact:
             type: Symfony\Component\Form\Extension\Core\Type\EmailType
             options:
@@ -106,3 +106,13 @@ dmishh_settings:
             type: Symfony\Component\Form\Extension\Core\Type\TextType
             options:
                 required: false
+        enableBacklink:
+            type: Symfony\Component\Form\Extension\Core\Type\CheckboxType
+            options:
+                required: false
+        backlinks:
+            type: Symfony\Component\Form\Extension\Core\Type\TextareaType
+            options:
+                required: false
+                attr:
+                    rows: 10
