--- a/app/config/dmishhsettings.yml
+++ b/app/config/dmishhsettings.yml
@@ -66,6 +66,14 @@ dmishh_settings:
                 required: false
                 attr:
                     rows: 7
+        ampGTM:
+            type: Symfony\Component\Form\Extension\Core\Type\TextType
+            options:
+                required: false
+        ga4MeasurementID:
+            type: Symfony\Component\Form\Extension\Core\Type\TextType
+            options:
+                required: false
         topKeyword:
             type: Symfony\Component\Form\Extension\Core\Type\TextareaType
             options:
