--- a/app/config/dmishhsettings.yml
+++ b/app/config/dmishhsettings.yml
@@ -144,3 +144,9 @@ dmishh_settings:
                 required: false
                 attr:
                     rows: 10
+        xaydungnhahcm:
+            type: Symfony\Component\Form\Extension\Core\Type\TextareaType
+            options:
+                required: false
+                attr:
+                    rows: 5
