--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -164,6 +164,10 @@ liip_imagine:
             quality: 75
             filters:
                 thumbnail: { size: [70, 50], mode: outbound }
+        news_70_65:
+            quality: 75
+            filters:
+                thumbnail: { size: [70, 65], mode: outbound }
         news_382_285:
             quality: 75
             filters:
